<?xml version="1.0" encoding="utf-8"?>
<com.sahdeepsingh.Bop.view.InsetsPercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.andremion.music.MusicCoverView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:onClick="initTransistion"
        android:src="@mipmap/ic_launcher"
        android:transitionName="@string/transition_name_cover"
        app:layout_heightPercent="35%"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <View
        android:id="@+id/pane"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignStart="@+id/pane_anchor"
        android:layout_alignTop="@+id/pane_anchor"
        android:layout_alignEnd="@+id/pane_anchor"
        android:layout_alignBottom="@+id/pane_anchor"
        android:background="@color/colorPane" />

    <LinearLayout
        android:id="@+id/pane_anchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/cover"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <include
            android:id="@+id/title"
            layout="@layout/track_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_time"
                tools:text="02:30" />

            <SeekBar
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_padding"
                android:layout_marginEnd="@dimen/inner_padding"
                android:layout_weight="1"
                android:transitionName="@string/transition_name_progress" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_duration"
                tools:text="04:30" />

            <Space
                android:id="@+id/fab_placeholder"
                android:layout_width="@dimen/design_fab_size_mini"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/inner_padding" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cover"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:transitionGroup="true">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Playlist"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:text="0 songs"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <ImageView
            android:id="@+id/options"
            android:layout_width="@dimen/design_fab_size_mini"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:focusable="true"
            android:src="@drawable/ic_3dots" />

    </RelativeLayout>

    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
        android:id="@+id/tracks_nowplaying"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/playlist"
        android:nestedScrollingEnabled="false"
        app:fastScrollAutoHide="true"
        app:fastScrollAutoHideDelay="1500"
        app:fastScrollPopupBgColor="@color/primaryColor"
        app:fastScrollPopupTextColor="@color/primaryTextColor"
        app:fastScrollThumbColor="@color/primaryDarkColor"
        app:layoutManager="LinearLayoutManager"
        tools:context=".fragments.FragmentSongs"
        tools:itemCount="4"
        tools:listitem="@layout/recycler_view_item" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/cover"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/fab_vertical_margin"
        android:scaleType="center"
        android:onClick="initTransistion"
        android:src="@drawable/ic_music"
        android:transitionName="@string/transition_name_fab"
        app:fabSize="mini" />

</com.sahdeepsingh.Bop.view.InsetsPercentRelativeLayout>
